added missing file

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <button id="cmdConnect" onclick="connect()">Connect</button>
-    <textarea id="txtInput" placeholder="q)"></textarea>
+    <div id="txtInput"></div>
     <button id="cmdInput" onclick="send();">Go</button>
     <div id="txtOutput" class="txtOutput"></div>
     <div id="txtResult" class="txtOutput"></div>
