--- a/prototype/index.html
+++ b/prototype/index.html
@@ -14,6 +14,18 @@
     </style>
 </head>
 <body>
+
+    <div id="kdbsrv">
+        <div>
+          <label for="server">Server</label>
+          <input type="text" id="server" v-model="enteredValue" />
+          <button v-on:click="addServer">Add Server</button>
+        </div>
+        <ul>
+          <li v-for="server in servers">{{ server }}</li>
+        </ul>
+    </div>
+
     <button id="cmdConnect" onclick="connect()">Connect</button>
     <div id="txtInput"></div>
     <button id="cmdInput" onclick="send();">Go</button>
@@ -23,5 +35,6 @@
 </body>
 <link href="node_modules/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
 <script type="text/javascript" src="node_modules/tabulator-tables/dist/js/tabulator.min.js"></script>
+<script src="vue/vue.global.js"></script>
 <script src="kdb.js"></script>
 </html>
