--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,33 +4,47 @@
     <title>KDB Studio2 Prototype</title>
     <style>
         /* define some CSS styling on page elements */
-        #txtInput {width: 85%; height: 60px; float:left; padding: 10px;}
-        #cmdInput {margin-left: 10px; margin-bottom: 10px; width:10%; height:30px; font-weight: bold;}
-        #cmdConnect {margin-left: 10px; margin-bottom: 10px; width:10%; height:30px; font-weight: bold;}
-        .txtOutput {
-            width: 96%; height: 200px; font-family: "Courier New"; padding: 10px; 
-            border: 1px solid gray; margin-top: 10px; overflow:auto;
+        #editor {
+            width: 100%; height:200px; float:left; margin-bottom: 10px; 
+            border: 1px solid gray
+        }
+        .btn {margin-left: 10px; margin-bottom: 10px; width:80px; height:30px; font-weight: bold;}
+        #txtOutput {
+            width: 100%; height: 120px; font-family: "Courier New"; font-size: smaller; padding: 10px; 
+            border: 1px solid gray; margin-top: 10px; margin-bottom: 10px; overflow:auto;
+        }
+        #txtResult {
+            width: 100%; height: 200px; font-family: "Courier New"; padding: 10px; 
+            border: 1px solid gray; margin-top: 10px; margin-bottom: 10px; overflow:auto;
         }
     </style>
 </head>
 <body>
 
-    <div id="kdbsrv">
-        <div>
-          <label for="server">Server</label>
-          <input type="text" id="server" v-model="enteredValue" />
-          <button v-on:click="addServer">Add Server</button>
+    <div id="v-app">
+        <div id="connect">
+            <select v-model="selectServer">
+                <option v-for="option in servers" :value="option.value">
+                    {{ option.text }}
+                </option>
+            </select>
+            <span style="padding: 10px;">{{ selectServer }}</span>
+            <button class="btn" v-on:click="connect">Connect</button>
+            <button class="btn" v-on:click="send">Go</button>
         </div>
-        <ul>
-          <li v-for="server in servers">{{ server }}</li>
-        </ul>
+        <div id="editor"></div>
+        <div id="txtOutput" v-html="resultJSON"></div>
+        <div id="txtResult" v-html="resultHTML"></div>
     </div>
 
-    <button id="cmdConnect" onclick="connect()">Connect</button>
-    <div id="txtInput"></div>
-    <button id="cmdInput" onclick="send();">Go</button>
-    <div id="txtOutput" class="txtOutput"></div>
-    <div id="txtResult" class="txtOutput"></div>
+
+
+
+    <!-- <button id="cmdConnect" onclick="connect()">Connect</button> -->
+    <!-- <div id="txtInput"style="border: 1px solid #ccc"></div> -->
+    <!-- <button id="cmdInput" onclick="send();">Go</button> -->
+    <!-- <div id="txtOutput" class="txtOutput"></div>
+    <div id="txtResult" class="txtOutput"></div> -->
     <script src="./renderer.js"></script>
 </body>
 <link href="node_modules/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
