--- a/prototype/index.html
+++ b/prototype/index.html
@@ -17,6 +17,15 @@
             width: 100%; height: 200px; font-family: "Courier New"; padding: 10px; 
             border: 1px solid gray; margin-top: 10px; margin-bottom: 10px; overflow:auto;
         }
+        table, th, td { 
+            border: 1px solid lightgray;
+            border-collapse: collapse;
+            padding-left: 10px;
+            padding-right: 10px;
+            font-family: "Lucida Sans";
+            text-align: left;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -24,8 +33,8 @@
     <div id="v-app">
         <div id="connect">
             <select v-model="selectServer">
-                <option v-for="option in servers" :value="option.name">
-                    {{ option.name }}
+                <option v-for="srv in servers" :value="srv.name">
+                    {{ srv.name }}
                 </option>
             </select>
             <span style="padding: 10px;">{{ selectServer }}</span>
@@ -33,29 +42,35 @@
             <button class="btn" v-on:click="toggleServers = !toggleServers">Servers</button>
             <button class="btn" v-on:click="send">Go</button>
             <div id="show-servers" v-show="toggleServers">
-                <ul>
-                    <li v-for="srv in servers">
-                        {{ srv.name }}: {{ srv.connStr }}
-                    </li>
-                </ul>
+                <table id="server-table" style="border:1px">
+                    <tr>
+                        <th>Name</th>
+                        <th>Host:Port</th>
+                        <th>User</th>
+                        <th> </th>
+                        <th> </th>
+                    </tr>
+                    <tr v-for="srv in servers">
+                        <td>{{ srv.name }}</td>
+                        <td>{{ srv.connStr }}</td>
+                        <td>N/A</td>
+                        <td><button v-on:click="editServer(srv.name)">Edit</button></td>
+                        <td><button v-on:click="deleteServer(srv.name)">Delete</button></td>
+                    </tr>
+                </table>
+                <button class="btn" @click="addServer">Add New</button>
             </div>
-            <!-- <div id="edit-server" v-show="toggleEditServer"> -->
-
-            <!-- </div> -->
+            <div id="edit-server" v-show="toggleEditServer">
+                <p>Editing...</p>
+                <button class="btn" @click="toggleEditServer = false">Cancel</button>
+                <button class="btn" @click="toggleEditServer = false">Save</button>
+            </div>
         </div>
         <div id="editor"></div>
         <div id="txtOutput" v-html="resultJSON"></div>
         <div id="txtResult" v-html="resultHTML"></div>
     </div>
 
-
-
-
-    <!-- <button id="cmdConnect" onclick="connect()">Connect</button> -->
-    <!-- <div id="txtInput"style="border: 1px solid #ccc"></div> -->
-    <!-- <button id="cmdInput" onclick="send();">Go</button> -->
-    <!-- <div id="txtOutput" class="txtOutput"></div>
-    <div id="txtResult" class="txtOutput"></div> -->
     <script src="./renderer.js"></script>
 </body>
 <link href="node_modules/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
