--- a/prototype/index.html
+++ b/prototype/index.html
@@ -45,9 +45,9 @@
             <button class="btn" v-on:click="connect">Connect</button>
             <button class="btn" v-on:click="toggleServers = !toggleServers">Servers</button>
             <button class="btn" v-on:click="send">Go</button>
-            <div id="show-servers" v-show="toggleServers">
+            <div id="show-servers" v-if="toggleServers">
                 <div v-for="srv in servers"> 
-                    <server-item :server="srv"></server-item>
+                    <server-item :server="srv" @save=saveServer></server-item>
                 </div>
                 <button class="btn" @click="addServer()">Add New</button>
             </div>
