refactored persistence into a seperate module

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <div id="v-app">
         <div id="connect">
             <select v-model="selectServer">
-                <option v-for="srv in servers" :value="srv.id">
+                <option v-for="(srv, index) in servers" :value="index">
                     {{ srv.name }}
                 </option>
             </select>
-            <span v-if="selectServer != -1" style="padding: 10px;">{{ servers[selectServer - 1].name }}</span>
+            <span v-if="selectServer != -1" style="padding: 10px;">{{ servers[selectServer].name }}</span>
             <button class="btn" v-on:click="connect">Connect</button>
             <button class="btn" v-on:click="toggleServers = !toggleServers">Servers</button>
             <button class="btn" v-on:click="send">Go</button>
