--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
   <body>
     <div id="v-app">
       <div id="connect">
-        <select v-model="selectServer">
+        <select v-model="selectServer" v-on:change="connect">
           <option v-for="(srv, index) in servers" :value="index">
             {{ srv.name }}
           </option>
         </select>
-        <span v-if="selectServer != -1" style="padding: 10px"
-          >{{ servers[selectServer].name }}</span
-        >
-        <button class="btn" v-on:click="connect">Connect</button>
         <button class="btn" v-on:click="toggleServers = !toggleServers">
           Servers
         </button>
