--- a/index.html
+++ b/index.html
@@ -11,38 +11,55 @@
 
     <style>
       /* define some CSS styling on page elements */
+      #container {
+        display: flex;
+        flex-direction: column;
+        height: 95vh;
+        /* border: 1px solid orange; */
+      }
+      .monaco-editor {
+        position: absolute;
+      }
       #editor {
         width: 100%;
-        height: 200px;
-        float: left;
-        margin-bottom: 10px;
+        min-height: 200px;
+        /* float: left; */
+        /* margin-bottom: 10px; */
         border: 1px solid gray;
+        flex: 1 1 auto;
+        /* resize: vertical; */
+      }
+      #connect {
+        /* margin-bottom: 10px; */
+        flex: none;
       }
       body {
         font-family: "Helvetica Neue", Helvetica;
       }
 
       #txtOutput {
-        width: 100%;
-        height: 120px;
+        /* width: 100%; */
+        /* height: 120px; */
         font-family: "Courier New";
         font-size: smaller;
-        padding: 10px;
+        /* padding: 10px; */
         border: 1px solid gray;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        /* margin-top: 10px; */
+        /* margin-bottom: 10px; */
         overflow: auto;
+        flex: auto;
       }
-      #txtResult {
+      /* #txtResult {
         width: 100%;
         height: 200px;
         font-family: "Courier New";
         padding: 10px;
         border: 1px solid gray;
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 10px; 
         overflow: auto;
-      }
+        flex: 2 1 auto;
+      }  */
       table,
       th,
       td {
@@ -53,10 +70,6 @@
         font-family: "Lucida Sans";
         text-align: left;
         margin-bottom: 10px;
-      }
-      li {
-        display: inline;
-        border: 1px solid gray;
       }
     </style>
   </head>
@@ -74,36 +87,57 @@
         ></server-edit>
       </el-dialog>
 
-      <div id="connect">
-        <el-select
-          size="small"
-          v-model="selectServer"
-          placeholder="Select a server"
-        >
-          <el-option
-            v-for="srv in servers.values()"
-            :key="srv.id"
-            :label="srv.name"
-            :value="srv.id"
+      <div id="container">
+        <div id="connect">
+          <el-select
+            size="mini"
+            v-model="selectServer"
+            placeholder="Select a server"
+            no-data-text="Use Add to set up a server"
           >
-          </el-option>
-        </el-select>
-        <el-button type="primary" size="mini" v-on:click="send">Go</el-button>
+            <el-option
+              v-for="srv in servers.values()"
+              :key="srv.id"
+              :label="srv.name"
+              :value="srv.id"
+            >
+            </el-option>
+          </el-select>
 
-        <el-button-group>
-          <el-button type="primary" size="mini" @click="editServer"
-            >Edit</el-button
-          >
-          <el-button type="primary" size="mini" @click="addServer"
-            >Add</el-button
-          >
-          <el-button type="primary" size="mini" @click="deleteServer"
-            >Delete</el-button
-          >
-        </el-button-group>
+          <el-button type="primary" size="mini" v-on:click="send">Go</el-button>
+
+          <el-button-group>
+            <el-button
+              type="primary"
+              size="mini"
+              @click="editServer"
+              :disabled="!selectServer"
+              >Edit</el-button
+            >
+            <el-button type="primary" size="mini" @click="addServer"
+              >Add</el-button
+            >
+            <el-popconfirm
+              title="Are you sure you want to delete this server?"
+              confirm-button-text="OK"
+              cancel-button-text="Cancel"
+              @confirm="deleteServer"
+            >
+              <el-button
+                slot="reference"
+                type="danger"
+                size="mini"
+                :disabled="!selectServer"
+                >Delete</el-button
+              >
+            </el-popconfirm>
+          </el-button-group>
+        </div>
+
+        <div id="editor"></div>
+        <div id="txtOutput" v-html="JSON.stringify(queryResult)"></div>
       </div>
-      <div id="editor"></div>
-      <div id="txtOutput" v-html="JSON.stringify(queryResult)"></div>
+
       <query-results v-bind:result="queryResult"></query-results>
     </div>
   </body>
