--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         overflow: auto;
         /* flex: auto; */
       }
-      table,
+      /* table,
       th,
       td {
         border: 1px solid lightgray;
@@ -48,7 +48,7 @@
         font-family: "Lucida Sans";
         text-align: left;
         margin-bottom: 10px;
-      }
+      } */
     </style>
   </head>
   <body>
