Basically working with pure JS AG Grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <link rel="stylesheet" href="node_modules/splitpanes/dist/splitpanes.css" />
 
+    <link
+      rel="stylesheet"
+      href="node_modules/ag-grid-community/dist/styles/ag-grid.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/ag-grid-community/dist/styles/ag-theme-balham.css"
+    />
+
     <style>
       #container {
         display: flex;
@@ -39,17 +48,6 @@
         overflow: auto;
         /* flex: auto; */
       }
-      /* table,
-      th,
-      td {
-        border: 1px solid lightgray;
-        border-collapse: collapse;
-        padding-left: 10px;
-        padding-right: 10px;
-        font-family: "Lucida Sans";
-        text-align: left;
-        margin-bottom: 10px;
-      } */
     </style>
   </head>
   <body>
@@ -150,5 +148,6 @@
 
   <script src="node_modules/vue/dist/vue.js"></script>
   <script src="node_modules/element-ui/lib/index.js"></script>
+  <script src="node_modules/ag-grid-community/dist/ag-grid-community.noStyle.js"></script>
   <script src="bootstrap.js"></script>
 </html>
